# jobhunting_agent

./: .gitignore  app.py  db.py  fix.txt  main.py  pyproject.toml  state.py
frontend/: index.html
nodes/: ProfileNode.py  askForNetworking.py  filterjobs.py  jobmatchnode.py  jobsearchNode.py  networkingNode.py  resumeparserNode.py  savetodb.py
tools/: exasearch.py  searchtool.py
