[project]
name = "finalyearproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "exa-py>=2.13.2",
    "fastapi>=0.115.0",
    "langchain>=1.3.4",
    "langchain-community>=0.4.2",
    "langchain-groq>=1.1.3",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.4",
    "llama-cloud>=2.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.20",
    "requests>=2.34.2",
    "uvicorn[standard]>=0.34.0",
]
